<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NavigatorFragments.HelpFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/helpFragment_help"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/background_light"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="7dp"
            android:text="@string/helpFragmentText_help"
            android:textColor="@android:color/background_dark"
            android:textSize="18dp"
            android:textStyle="bold"/>


        <TextView
            android:id="@+id/helpFragment_howDo"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/background_light"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="7dp"
            android:text="@string/helpFragmentText_howDo"
            android:textColor="@android:color/background_dark"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/helpFragment_questions"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/background_light"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="7dp"
            android:text="@string/helpFragmentText_questions"
            android:textColor="@android:color/background_dark"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/helpFragment_sendToMessage"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/background_light"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="7dp"
            android:text="@string/helpFragmentText_sendToMessage"
            android:textColor="@android:color/background_dark"
            android:textSize="18dp" />
    </LinearLayout>

</FrameLayout>